--- a/style.css
+++ b/style.css
@@ -89,17 +89,21 @@ li {
 
 
 
-
-
 /* Navbar styles */
 .navbar {
-    background-color: #007BFF;
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    background-color: #f7f8fa;
     padding: 10px 0;
 }
 
 .navbar ul {
     list-style: none;
     text-align: center;
+    margin: 0;
+    padding: 0;
 }
 
 .navbar li {
@@ -108,8 +112,33 @@ li {
 }
 
 .navbar a {
-    color: #fff;
+    color: #050505;
     text-decoration: none;
     font-weight: bold;
     font-size: 16px;
+    position: relative; /* Add relative positioning for pseudo-element */
+}
+
+/* Add an underline effect on hover */
+.navbar a:hover {
+    background: linear-gradient(90deg, rgba(255, 255, 255, 0), rgba(255, 255, 255, 0.2));
+}
+
+/* Add an underline pseudo-element */
+.navbar a::before {
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 1px; /* Adjust the underline height as needed */
+    background-color: #000000; /* Match the navbar background color */
+    bottom: 0;
+    left: 0;
+    transform: scaleX(0); /* Initial scale to 0 */
+    transform-origin: bottom left;
+    transition: transform 0.3s ease; /* Add a smooth transition effect */
+}
+
+/* Scale the underline on hover */
+.navbar a:hover::before {
+    transform: scaleX(1);
 }
